Make hero section

--- a/assets/css/tailwind.pcss
+++ b/assets/css/tailwind.pcss
@@ -12,4 +12,8 @@
   .main-gardient {
     @apply bg-gradient-to-r from-[#004876] to-[#1E71A6];
   }
+  
+  .secondary-gardient {
+    @apply bg-gradient-to-r from-[#6F4336] to-[#3B2F2F];
+  }
 }
